人脸注册后将数据保存到本地,并且通知服务器该账户已注册人脸

--- a/app/src/main/res/layout/fragment_my_info.xml
+++ b/app/src/main/res/layout/fragment_my_info.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/base_container"
@@ -17,72 +16,93 @@
     </FrameLayout>
 
     <ImageView
-        android:scaleType="fitXY"
         android:id="@+id/iv_myInfo_Image"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@mipmap/icon_touxiang"
         android:layout_width="@dimen/dp_140"
-        android:layout_height="@dimen/dp_140"/>
+        android:layout_height="@dimen/dp_140"
+        android:scaleType="fitXY"
+        android:src="@mipmap/icon_touxiang"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_myInfo_userName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_my_card_username"
-        android:text="这是我的用户名"
-        android:gravity="center"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/bg_my_card_username"
+        android:gravity="center"
         android:paddingStart="10dp"
-        android:paddingEnd="10dp"
         android:paddingTop="5dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="5dp"
+        android:text="这是我的用户名"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_myInfo_Image" />
+
     <TextView
-        android:visibility="visible"
-        android:text="这是我的领券历史"
-        android:textSize="18sp"
-        android:background="@drawable/bg_my_card_search_history"
         android:id="@+id/tv_myInfo_coupon_history"
-        app:layout_constraintTop_toBottomOf="@id/tv_myInfo_userName"
         android:layout_width="match_parent"
-        android:gravity="center"
+        android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/bg_my_card_search_history"
+        android:gravity="center"
         android:paddingStart="10dp"
+        android:paddingTop="5dp"
         android:paddingEnd="10dp"
-        android:paddingTop="5dp"
         android:paddingBottom="5dp"
+        android:text="这是我的领券历史"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:visibility="visible"
-        android:text="点我修改密码"
         android:textSize="18sp"
-        android:background="@drawable/bg_my_card_change_psd"
-        android:id="@+id/tv_myInfo_change_pwd"
-        app:layout_constraintTop_toBottomOf="@id/tv_myInfo_coupon_history"
-        android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="20dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:textColor="@color/white"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_myInfo_userName" />
+
+    <TextView
+        android:id="@+id/tv_myInfo_change_pwd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/bg_my_card_change_psd"
+        android:gravity="center"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:text="点我修改密码"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_myInfo_coupon_history" />
+
+    <TextView
+        android:id="@+id/tv_bind_face"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/bg_my_card_bind_face"
+        android:gravity="center"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:text="点我绑定面容"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_myInfo_change_pwd" />
 
     <Button
         android:id="@+id/btn_myinfo_unregister"
@@ -90,9 +110,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/bg_my_info_btn_login"
         android:gravity="center"
-        android:layout_marginBottom="20dp"
         android:text="点我退出！"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -106,25 +126,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_my_info_btn_login"
-        android:text="点我登录吧！"
-        android:textColor="@color/white"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:text="点我登录吧！"
+        android:textColor="@color/white"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_myinfo_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:background="@drawable/bg_my_info_btn_login"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/white"
         android:text="点我注册吧！"
+        android:textColor="@color/white"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_myinfo_login" />
