--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -117,6 +117,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:id="@+id/btn_register_face_register"
+        android:visibility="invisible"
         android:background="@drawable/bg_my_info_btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
