--- a/app/src/main/res/layout/fragment_selected.xml
+++ b/app/src/main/res/layout/fragment_selected.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <LinearLayout
-        android:background="@color/color_EFEEEEE_selected"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <androidx.recyclerview.widget.RecyclerView
-            android:background="@color/white"
-            android:id="@+id/left_cagegories"
-            android:layout_width="120dp"
-            android:overScrollMode="never"
-            android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/color_EFEEEEE_selected"
+        android:orientation="horizontal">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:overScrollMode="never"
+            android:id="@+id/left_cagegories"
+            android:layout_width="120dp"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:overScrollMode="never" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/right_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/right_content"/>
-        
+            android:overScrollMode="never" />
+
     </LinearLayout>
 </LinearLayout>
