--- a/app/src/main/res/layout/item_selectedpage_right_content.xml
+++ b/app/src/main/res/layout/item_selectedpage_right_content.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/selected_cover"
                 android:layout_width="match_parent"
                 android:layout_height="220dp"
-                android:src="@mipmap/ic_launcher"/>
+                android:src="@mipmap/ic_logo"/>
             <TextView
                 android:id="@+id/selected_off_price"
                 android:paddingLeft="20dp"
