提供保存头像功能 进入页面主动加载头像

--- a/app/src/main/res/layout/fragment_my_info.xml
+++ b/app/src/main/res/layout/fragment_my_info.xml
@@ -17,9 +17,9 @@
 
     <ImageView
         android:id="@+id/iv_myInfo_Image"
-        android:layout_width="@dimen/dp_140"
-        android:layout_height="@dimen/dp_140"
-        android:scaleType="fitXY"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="centerCrop"
         android:src="@mipmap/icon_touxiang"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
