--- a/app/src/main/res/layout/activity_change_psw.xml
+++ b/app/src/main/res/layout/activity_change_psw.xml
@@ -35,6 +35,35 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="旧密码:"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@id/edt_login_account"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:inputType="numberPassword"
+            android:id="@+id/edt_old_psw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="请输入新密码"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/textView"
+            app:layout_constraintTop_toTopOf="@+id/textView" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/ll_new_pwd"
+        app:layout_constraintTop_toBottomOf="@+id/ll_old_pwd"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_newPw_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="新密码:"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/edt_login_account"
@@ -53,8 +82,8 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/ll_new_pwd"
-        app:layout_constraintTop_toBottomOf="@+id/ll_old_pwd"
+        android:id="@+id/ll_new_pwd_repeat"
+        app:layout_constraintTop_toBottomOf="@+id/ll_new_pwd"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         android:orientation="horizontal"
@@ -83,7 +112,7 @@
             app:layout_constraintTop_toTopOf="@+id/textView1" />
     </LinearLayout>
     <Button
-        app:layout_constraintTop_toBottomOf="@+id/ll_new_pwd"
+        app:layout_constraintTop_toBottomOf="@+id/ll_new_pwd_repeat"
         android:id="@+id/btn_chang_psw_act_change"
         android:text="确认修改"
         android:textSize="18sp"
